<resources>
    <string name="title">What\'s my IQ?</string>
    <string name="app_name">What\'s my IQ?</string>
    <string name="question">In welcher Altersgruppe bist du?</string>
    <string name="question2">Ein Ball + Trikot kosten 11CHF, das Trikot kostet 10CHF mehr. Wie viel kostet der Ball?</string>
    <string name="question3">In einem See gibt es Seerosen. Jeden Tag verdoppelt sich die Anzahl der Blätter. Wenn es 48 Tage dauert, damit die Seerosenblätter den gesamten See bedecken, wie lange dauert es, bis die Blätter die Hälfte des Sees bedecken?</string>
    <string name="question4">Welcher Tag ist übermorgen, wenn vorgestern der Tag nach Dienstag war?</string>
    <string name="question5">Wer ist der Beste Programmierer?</string>
    <string name="submit">Submit</string>
    <string name="selectionOne"><![CDATA[<18]]></string>
    <string name="selectionTwo">18–30</string>
    <string name="selectionThree">30+</string>
</resources>