<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="357dp"
        android:layout_height="606dp"
        android:layout_marginTop="40dp"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MainActivity"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="9dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginTop="32dp"
            android:text="@string/question"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/question"
            android:layout_marginTop="16dp">

            <RadioButton
                android:id="@+id/firstSelection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectionOne" />

            <RadioButton
                android:id="@+id/secondSelection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectionTwo" />

            <RadioButton
                android:id="@+id/thirdSelection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectionThree" />
        </RadioGroup>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioGroup"
            android:layout_marginTop="33dp"
            android:text="@string/submit" />

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:icon="@mipmap/ic_app_icon_round" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>