<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondQuestionActivity">

    <RelativeLayout
        android:id="@+id/activity_second_question"
        android:layout_width="322dp"
        android:layout_height="465dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="92dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".SecondQuestionActivity"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/question3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginTop="32dp"
            android:text="@string/question3"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/input2"
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/question3"
            android:layout_marginTop="16dp"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/submitButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/input2"
            android:layout_marginTop="33dp"
            android:text="@string/submit" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>